[gd_scene load_steps=11 format=3 uid="uid://d1mb1hnk42fxo"]

[ext_resource type="Script" uid="uid://dvssq0oaeie1r" path="res://scripts/died.gd" id="1_d4luv"]
[ext_resource type="Texture2D" uid="uid://bjksli3nbjyoq" path="res://assets/sprites/vignette.png" id="1_ppem4"]
[ext_resource type="FontFile" uid="uid://bgvjhe6mkgk0e" path="res://assets/fonts/PixelOperator8.ttf" id="2_d4luv"]
[ext_resource type="FontFile" uid="uid://dwyiv31ig70ne" path="res://assets/fonts/PixelOperator8-Bold.ttf" id="3_jw1bs"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mubft"]
bg_color = Color(0.862745, 0.0784314, 0.235294, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mr4x7"]
bg_color = Color(0.698039, 0.133333, 0.133333, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_p88vf"]
bg_color = Color(0.545098, 0, 0, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="Animation" id="Animation_70bww"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PanelContainer/ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("You Died:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PanelContainer/VBoxContainer:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("PanelContainer/ColorRect/TextureRect:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_p1qek"]
resource_name = "fade_in"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PanelContainer/ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.858333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("You Died:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.858333, 1.36667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PanelContainer/VBoxContainer:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.85, 1.35),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("PanelContainer/ColorRect/TextureRect:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.86),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0.65098)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_w5tn2"]
_data = {
&"RESET": SubResource("Animation_70bww"),
&"fade_in": SubResource("Animation_p1qek")
}

[node name="died" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_d4luv")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0

[node name="ColorRect" type="ColorRect" parent="PanelContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
color = Color(0.109804, 0.109804, 0.109804, 1)

[node name="TextureRect" type="TextureRect" parent="PanelContainer/ColorRect"]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_ppem4")
expand_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 10

[node name="Retry" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0.266667, 0, 0, 1)
theme_override_colors/font_color = Color(1, 0.960784, 0.960784, 1)
theme_override_constants/outline_size = 10
theme_override_constants/align_to_largest_stylebox = 1
theme_override_fonts/font = ExtResource("2_d4luv")
theme_override_font_sizes/font_size = 32
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_mubft")
theme_override_styles/hover = SubResource("StyleBoxFlat_mr4x7")
theme_override_styles/normal = SubResource("StyleBoxFlat_p88vf")
text = "Retry"
icon_alignment = 1
expand_icon = true

[node name="Main Menu" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0.266667, 0, 0, 1)
theme_override_colors/font_color = Color(1, 0.960784, 0.960784, 1)
theme_override_constants/outline_size = 10
theme_override_constants/align_to_largest_stylebox = 1
theme_override_fonts/font = ExtResource("2_d4luv")
theme_override_font_sizes/font_size = 32
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_mubft")
theme_override_styles/hover = SubResource("StyleBoxFlat_mr4x7")
theme_override_styles/normal = SubResource("StyleBoxFlat_p88vf")
text = "Main Menu"
icon_alignment = 1
expand_icon = true

[node name="Settings" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0.266667, 0, 0, 1)
theme_override_colors/font_color = Color(1, 0.960784, 0.960784, 1)
theme_override_constants/outline_size = 10
theme_override_constants/align_to_largest_stylebox = 1
theme_override_fonts/font = ExtResource("2_d4luv")
theme_override_font_sizes/font_size = 32
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_mubft")
theme_override_styles/hover = SubResource("StyleBoxFlat_mr4x7")
theme_override_styles/normal = SubResource("StyleBoxFlat_p88vf")
text = "Settings"
icon_alignment = 1
expand_icon = true

[node name="Quit" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0.266667, 0, 0, 1)
theme_override_colors/font_color = Color(1, 0.960784, 0.960784, 1)
theme_override_constants/outline_size = 10
theme_override_constants/align_to_largest_stylebox = 1
theme_override_fonts/font = ExtResource("2_d4luv")
theme_override_font_sizes/font_size = 32
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_mubft")
theme_override_styles/hover = SubResource("StyleBoxFlat_mr4x7")
theme_override_styles/normal = SubResource("StyleBoxFlat_p88vf")
text = "Quit"
icon_alignment = 1
expand_icon = true

[node name="You Died" type="Label" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -203.0
offset_top = 99.0
offset_right = 203.0
offset_bottom = 155.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 0.960784, 0.960784, 1)
theme_override_colors/font_outline_color = Color(0.266667, 0, 0, 1)
theme_override_constants/outline_size = 20
theme_override_fonts/font = ExtResource("3_jw1bs")
theme_override_font_sizes/font_size = 56
text = "YOU DIED"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_w5tn2")
}
autoplay = "fade_in"

[connection signal="pressed" from="PanelContainer/VBoxContainer/Retry" to="." method="_on_retry_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Main Menu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
